@@ -5,3 +5,4 @@
 * Fixed issue where it is known for certain if Lycan is in game
 * Added the Tanner role
 * Added the Lycan role
+* Added the Beholder role
